# mlp-storage-vdb

./: .gitignore  CLAUDE.md  ManPage.md  README.md  Rules.md  mlpstorage  pyproject.toml
.github/workflows/: test.yml
.planning/: .continue-here.md  HANDOFF.json
configs/dlio/workload/: README_S3DLIO_CONFIGS.md  dlrm_b200.yaml  dlrm_datagen.yaml  dlrm_mi355.yaml  flux_datagen.yaml  unet3d_b200.yaml
configs/vectordbbench/: default.yaml
docs/: DATALOADER_ARCHITECTURE.md  DLRM_NP_Scaling_Results.md  Flux_NP_ReadThreads_Scaling_Results.md  MULTI_ENDPOINT_GUIDE.md  OBJECT_STORAGE_GUIDE.md  OBJECT_STORAGE_TESTING.md  QUICK_START.md  README.md  RetinaNet_NP_Scaling_Results.md  UNet3D_NP_Scaling_Results.md
kv_cache_benchmark/: DESIGN.md  README.md  mlperf_wrapper.py
kv_cache_benchmark/kv_cache/: cache.py
kv_cache_benchmark/tests/: test_kv_cache.py
kv_cache_benchmark/utils/: kv-cache-wrapper.sh
mlpstorage_py/: __init__.py  cli_parser.py  cluster_collector.py  config.py  main.py  mlps_logging.py  rules_legacy.py  run_directory.py  run_summary.py  storage_config.py  utils.py  validation_helpers.py
mlpstorage_py/benchmarks/: base.py  dlio.py  kvcache.py  vectordbbench.py
mlpstorage_py/checkpointing/storage_readers/: minio_reader.py  s3torch_reader.py
mlpstorage_py/checkpointing/storage_writers/: minio_writer.py  s3dlio_writer.py  s3torch_writer.py
mlpstorage_py/cli/: __init__.py  checkpointing_args.py  common_args.py  help_formatter.py  kvcache_args.py  lockfile_args.py  training_args.py  utility_args.py  vectordb_args.py
mlpstorage_py/environment/: validators.py
mlpstorage_py/reporting/: directory_validator.py
mlpstorage_py/rules/: models.py  utils.py
mlpstorage_py/rules/submission_checkers/: base.py  checkpointing.py  training.py
mlpstorage_py/submission_checker/: __main__.py  constants.py  coverage_mapping.py  loader.py  main.py  rule_registry.py
mlpstorage_py/submission_checker/checks/: base.py  checkpointing_checks.py  directory_checks.py  helpers.py  (+5 more)
mlpstorage_py/system_description/: example_NAS.yaml  example_NFS.yaml  example_PFS.yaml  example_cloud.yaml  example_drive.yaml  example_remote_block.yaml  schema.yaml  schema_validator.py
mlpstorage_py/tests/: conftest.py  test_base_check_helpers.py  test_benchmarks.py  test_bug03_closed_mpi_processes.py  test_checkpointing_check_iter_valid_files.py  test_checkpointing_check_phase2.py  test_checkpointing_check_retrofit.py  test_checkpointing_timestamp_gap_sentinel.py  test_cluster_collector.py  test_code_checksum.py  test_config_model_parallelism.py  test_config_reference_checksum.py  test_constants_checkpoint_files.py  test_default_spec_version.py  test_definition_of_done.py  test_directory_check_retrofit.py  test_directory_check_run_timestamps.py  test_helpers.py  test_issue_376_file_arg_conflict.py  test_loader_metadata_refresh.py  test_loader_missing_optional_dirs.py  test_main_submitters_filter.py  test_mpi_cluster_collector_issue_303.py  test_open_closed_flag_recognition.py  test_rule_registry.py  test_rules.py  test_rules_coverage.py  test_run_results_json_missing_run_dir.py  test_run_timestamp_gap_none_guard.py  test_stub_checks.py  test_submission_checker_structure.py  test_system_yaml_schema_check.py  test_todo_002_retirement_contract.py  test_training_check_extended_none_guard.py  test_training_check_phase2.py  test_training_check_retrofit.py  test_training_check_summary_none_guard.py
scripts/: fix_micron_9550_15tb.py
system_description/: example1.yaml  example2.yaml  example_NAS.yaml  example_NFS.yaml  example_PFS.yaml  example_drive.yaml  example_remote_block.yaml  schema.yaml  schema.yml  schema_validator.py  test_schema_validator.py
tests/: DLRM_test_results.md  README.md  conftest.py  run_elasticsearch_5k_hnsw.sh  run_milvus_10k_hnsw.sh  run_pgvector_5k_hnsw.sh
tests/configs/: S3_TESTING_GUIDE.md  elasticsearch_5k_hnsw.yaml  milvus_10k_hnsw.yaml  pgvector_5k_hnsw.yaml  vectordb_readme.md
tests/integration/: test_ab_comparison.py  test_benchmark_flow.py  test_dlio_mpi.py  test_issue_380_dlio_mpi_rank.py  test_multi_endpoint_integration.py  test_real_accumulation.py
tests/object-store/: README.md  gen_retinanet_jpeg.sh  gen_unet3d_npz.sh  run_dlrm_bench.sh  run_flux_bench.sh  show_results.sh  test_mlp_minio.sh  test_mlp_s3dlio.sh  test_mlp_s3torch.sh  test_retinanet.sh  test_s3dlio_multilib.sh  test_unet3d.sh
tests/unit/: test_accumulation.py  test_benchmarks_base.py  test_benchmarks_kvcache.py  test_benchmarks_vectordb.py  test_cli.py  test_cli_kvcache.py  test_cli_parser.py  test_cli_vectordb.py  test_cluster_collector.py  test_config_consistency.py  test_datagen_command_generation.py  test_dlio_object_storage.py  test_example_system_descriptions.py  test_help_behavior.py  test_main_warnings.py  test_mlperf_wrapper.py  test_parquet_reader.py  test_parser_modes.py  test_rules_checkers.py  test_rules_parser_gating_consistency.py  test_run_summary.py  test_schema_validator.py  test_storage_config.py  test_utils.py  test_validation_helpers.py  test_vdb_modular_fake_backend.py  test_version.py
training/: README.md
vdb_benchmark/: README.md  pyproject.toml
vdb_benchmark/tests/tests/: test_issue_375_chunked_insert_ids.py  test_vdb4_elasticsearch_batch.py  test_vdb_high_fixes.py
vdb_benchmark/vdbbench/: enhanced_bench.py  load_vdb.py  mpi_aggregate.py  mpi_common.py  mpi_wrapper.py  simple_bench.py
vdb_benchmark/vdbbench/benchmark/: .env.example  README.md  __init__.py  __main__.py  collection_admin.py  generator.py  ground_truth.py  orchestrator.py  run_benchmark.py  search_runner.py
vdb_benchmark/vdbbench/benchmark/backends/: README.md  __init__.py  _env.py  _help.py  base.py
vdb_benchmark/vdbbench/benchmark/backends/elasticsearch/: README.md  __init__.py  backend.py
vdb_benchmark/vdbbench/benchmark/backends/milvus/: README.md  __init__.py  backend.py
vdb_benchmark/vdbbench/benchmark/backends/pgvector/: README.md  __init__.py  backend.py
vdb_benchmark/vdbbench/benchmark/configs/: 1m_diskann.yaml  1m_hnsw.yaml  elasticsearch_1m_hnsw.yaml  pgvector_1m_hnsw.yaml
(+11 files in other folders)
