[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpstorage"
version = "3.0.14"
description = "MLPerf Storage Benchmark Suite"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLCommons Storage Working Group"}
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "psutil>=5.9",
    "pyarrow",
    "pyyaml>=6.0",
    "packaging>=21.0",
    "rich>=13.0",
    "dlio-benchmark", # Required dependency
    "pydantic>=2.13.4",
    "minio>=7.2.20",
    "s3torchconnector>=1.5.0",
    "python-dotenv>=1.0.0",
    "s3dlio>=0.9.100",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
full = [
    "dlio-benchmark",
]
vectordb = [
  "pymilvus>=2.4.0",
  "psycopg2-binary>=2.9",
  "pgvector>=0.2",
  "elasticsearch>=8.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

vectordb-milvus = [
  "pymilvus>=2.4.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

vectordb-pgvector = [
  "psycopg2-binary>=2.9",
  "pgvector>=0.2",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

vectordb-elasticsearch = [
  "elasticsearch>=8.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

[project.urls]
"Homepage" = "https://github.com/mlcommons/storage"
"Bug Tracker" = "https://github.com/mlcommons/storage/issues"

[tool.setuptools]
packages = {find = {include = ["mlpstorage_py*", "vdbbench*"]}}

[tool.setuptools.package-data]
"mlpstorage_py" = ["../configs/dlio/workload/*.yaml"]

[project.scripts]
mlpstorage = 'mlpstorage_py.main:main'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --setup-show -m 'not slow'"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: tests that invoke the real mlpstorage CLI / MPI and take >10s. Excluded from the default suite; opt in with `pytest -m slow` (or `pytest -m ''` to run everything).",
    "integration: subprocess + end-to-end tests (Phase 3 DoD per CONTEXT.md D-E1)",
]

[tool.coverage.run]
source = ["mlpstorage_py"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# =============================================================================
# UV Configuration
# =============================================================================

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
# s3dlio only ships Linux wheels — restrict resolution to Linux.
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
# Pinned to upstream main @ PR #24 merge — carries:
#   - DLIO PR #21 fix for storage #391 part 1 (TorchIterableDatasetSimple gating)
#   - DLIO PR #22 fix for storage #415 (mpi4py auto-init in spawn workers)
#   - DLIO PR #23 fix for storage #391 part 2 (sudo -n + warn-once for drop_caches)
#   - DLIO PR #24 fix for storage #448 (per-node worker-memory budget)
#   - DLIO PR #25 fix for storage #455 (sampler floor division — equal per-rank shards)
dlio-benchmark = { git = "https://github.com/mlcommons/DLIO_local_changes.git", rev = "ef58613b59d4ad510f467dd53b2b326f25829f1b" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
