[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdbbench"
version = "0.1.0"
description = "Vector Database Benchmarking Tool"
readme = "README.md"
authors = [
    {name = "Vector DB Storage WG TF"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "pymilvus",
    "pyyaml",
    "tabulate"
]

[project.optional-dependencies]
milvus = [
  "pymilvus>=2.4.0",
]

pgvector = [
  "psycopg2-binary>=2.9",
  "pgvector>=0.2",
]

elasticsearch = [
  "elasticsearch>=8.0",
]

dotenv = [
  "python-dotenv>=1.0.0",
]

all = [
  "pymilvus>=2.4.0",
  "psycopg2-binary>=2.9",
  "pgvector>=0.2",
  "elasticsearch>=8.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mlcommons/storage/tree/main/vdb_benchmark"
"Bug Tracker" = "https://github.com/mlcommons/storage/issues"

[project.optional-dependencies]
mpi = [
    "mpi4py>=4.0.0",
]

[project.scripts]
compact-and-watch = "vdbbench.compact_and_watch:main"
load-vdb = "vdbbench.load_vdb:main"
vdbbench = "vdbbench.simple_bench:main"
enhanced-bench = "vdbbench.enhanced_bench:main"
vdb-mpi-wrapper = "vdbbench.mpi_wrapper:main"
vdb-aggregate = "vdbbench.mpi_aggregate:main"
vdbbench-modular = "vdbbench.benchmark.run_benchmark:main"
vdbbench-collections = "vdbbench.benchmark.collection_admin:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
vdbbench = ["*.py"]
